# HackathonAutumn2024

./: .gitignore  Xakaton2024.sln  docker-compose.yml
Xakaton2024/: ApplicationContext.cs  Dockerfile  Program.cs  Xakaton2024.csproj
Xakaton2024/Controllers/: AuthController.cs  OrderController.cs  TravelInfoController.cs
Xakaton2024/Models/: RegistrationUser.cs  Requests.cs
Xakaton2024/Properties/: launchSettings.json
Xakaton2024/Script/: DeterminingIPAddress.cs  TokenService.cs
ticket_tracker/: .env  Cargo.toml  Dockerfile
ticket_tracker/src/: api_response.rs  handlers.rs  lib.rs  main.rs  models.rs
ticket_tracker/src/handlers/: queue.rs  train.rs  utils.rs
ticket_tracker/src/models/: queue.rs  train.rs
