[package]
name = "ticket_tracking"
version = "0.1.0"
edition = "2021"

[dependencies]
axum = {version = "0.7.7", features = ["macros"]}
tokio = { version = "1.41.0", features = ["full"] }
reqwest = { version = "0.12", features = ["json"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1.0"
dashmap = "6.1.0"
dotenv = "0.15.0"